<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.redhat.swatch</groupId>
    <artifactId>swatch-quarkus-parent</artifactId>
    <version>1.1.0-SNAPSHOT</version>
    <relativePath>../swatch-quarkus-parent/pom.xml</relativePath>
  </parent>

  <artifactId>swatch-utilization</artifactId>
  <name>SWATCH - Services - Utilization</name>
  <packaging>quarkus</packaging>

  <properties>
    <java.version>21</java.version>
    <maven.compiler.release>${java.version}</maven.compiler.release>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-common-health</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-security</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-hibernate-validator</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-micrometer-registry-prometheus</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-opentelemetry</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-resteasy-jackson</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-resteasy-client-jackson</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-smallrye-openapi</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-messaging-kafka</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-jdbc-postgresql</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-liquibase</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-common-panache</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-common-security</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkiverse.unleash</groupId>
      <artifactId>quarkus-unleash</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.cloud.common</groupId>
      <artifactId>clowder-quarkus-config-source</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-product-configuration</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-common-kafka</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-common-trace-response</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-common-smallrye-fault-tolerance</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-common-splunk</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.cloud.common</groupId>
      <artifactId>insights-notification-schemas-java</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-junit-mockito</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-jdbc-h2</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>rest-assured</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.smallrye.reactive</groupId>
      <artifactId>smallrye-reactive-messaging-in-memory</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.openapitools</groupId>
        <artifactId>openapi-generator-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <inputSpec>${project.basedir}/src/main/resources/META-INF/openapi.yaml</inputSpec>
              <generatorName>java</generatorName>
              <modelPackage>com.redhat.swatch.utilization.openapi.model</modelPackage>
              <apiPackage>com.redhat.swatch.utilization.openapi.resource</apiPackage>
              <invokerPackage>com.redhat.swatch.utilization.openapi</invokerPackage>
              <groupId>com.redhat.swatch.utilization</groupId>
              <output>${project.build.directory}/generated-sources</output>
              <generateApiTests>false</generateApiTests>
              <generateModelTests>false</generateModelTests>
              <configOptions>
                <interfaceOnly>true</interfaceOnly>
                <library>microprofile</library>
                <java8>true</java8>
                <dateLibrary>java8</dateLibrary>
                <serializationLibrary>jackson</serializationLibrary>
                <useBeanValidation>true</useBeanValidation>
                <microprofileRestClientVersion>3.0</microprofileRestClientVersion>
                <useJakartaEE>true</useJakartaEE>
              </configOptions>
              <additionalProperties>
                <!--
                see https://github.com/OpenAPITools/openapi-generator/pull/4713#issuecomment-633906581
                microprofile doesn't support the standard useJakartaEE=true
                -->
                <additionalProperty>disableMultipart=true</additionalProperty>
                <additionalProperty>rootJavaEEPackage=jakarta</additionalProperty>
              </additionalProperties>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.jsonschema2pojo</groupId>
        <artifactId>jsonschema2pojo-maven-plugin</artifactId>
        <configuration>
          <targetPackage>com.redhat.swatch.utilization.model</targetPackage>
          <includeAdditionalProperties>false</includeAdditionalProperties>
          <includeJsr303Annotations>true</includeJsr303Annotations>
          <initializeCollections>false</initializeCollections>
          <dateTimeType>java.time.OffsetDateTime</dateTimeType>
          <sourceType>yamlschema</sourceType>
          <generateBuilders>true</generateBuilders>
          <includeGetters>true</includeGetters>
          <includeSetters>false</includeSetters>
          <useJakartaValidation>true</useJakartaValidation>
        </configuration>
        <executions>
          <execution>
            <id>utilization-summary-from-swatch-core</id>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <sourceDirectory>${maven.multiModuleProjectDirectory}/swatch-core/schemas</sourceDirectory>
              <sourcePaths>
                <sourcePath>utilization_summary.yaml</sourcePath>
              </sourcePaths>
            </configuration>
          </execution>
          <execution>
            <id>send-notification-variant-payload</id>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <sourceDirectory>${project.basedir}/schemas</sourceDirectory>
              <sourcePaths>
                <sourcePath>send_notification_variant_payload.yaml</sourcePath>
              </sourcePaths>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
